syntax = "proto3";

package v1;

option go_package = "github.com/liliang-cn/sds/api/proto/v1";

// SDS Controller Service
service SDSController {
  // Pool operations
  rpc CreatePool(CreatePoolRequest) returns (CreatePoolResponse);
  rpc DeletePool(DeletePoolRequest) returns (DeletePoolResponse);
  rpc GetPool(GetPoolRequest) returns (GetPoolResponse);
  rpc ListPools(ListPoolsRequest) returns (ListPoolsResponse);
  rpc AddDiskToPool(AddDiskToPoolRequest) returns (AddDiskToPoolResponse);

  // Node operations
  rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse);
  rpc UnregisterNode(UnregisterNodeRequest) returns (UnregisterNodeResponse);
  rpc GetNode(GetNodeRequest) returns (GetNodeResponse);
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);

  // Resource operations
  rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse);
  rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse);
  rpc GetResource(GetResourceRequest) returns (GetResourceResponse);
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);
  rpc AddVolume(AddVolumeRequest) returns (AddVolumeResponse);
  rpc RemoveVolume(RemoveVolumeRequest) returns (RemoveVolumeResponse);
  rpc ResizeVolume(ResizeVolumeRequest) returns (ResizeVolumeResponse);
  rpc ResourceStatus(ResourceStatusRequest) returns (ResourceStatusResponse);
  rpc SetPrimary(SetPrimaryRequest) returns (SetPrimaryResponse);
  rpc SetSecondary(SetSecondaryRequest) returns (SetSecondaryResponse);
  rpc CreateFilesystem(CreateFilesystemRequest) returns (CreateFilesystemResponse);
  rpc MountResource(MountResourceRequest) returns (MountResourceResponse);
  rpc UnmountResource(UnmountResourceRequest) returns (UnmountResourceResponse);
  rpc MakeHa(MakeHaRequest) returns (MakeHaResponse);
  rpc EvictHa(EvictHaRequest) returns (EvictHaResponse);
  rpc DeleteHa(DeleteHaRequest) returns (DeleteHaResponse);
  rpc GetHa(GetHaRequest) returns (GetHaResponse);
  rpc ListHa(ListHaRequest) returns (ListHaResponse);

  // Snapshot operations
  rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse);
  rpc DeleteSnapshot(DeleteSnapshotRequest) returns (DeleteSnapshotResponse);
  rpc RestoreSnapshot(RestoreSnapshotRequest) returns (RestoreSnapshotResponse);
  rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsResponse);

  // Gateway operations
  rpc CreateNFSGateway(CreateNFSGatewayRequest) returns (CreateNFSGatewayResponse);
  rpc CreateISCSIGateway(CreateISCSIGatewayRequest) returns (CreateISCSIGatewayResponse);
  rpc CreateNVMeGateway(CreateNVMeGatewayRequest) returns (CreateNVMeGatewayResponse);
  rpc DeleteGateway(DeleteGatewayRequest) returns (DeleteGatewayResponse);
  rpc GetGateway(GetGatewayRequest) returns (GetGatewayResponse);
  rpc ListGateways(ListGatewaysRequest) returns (ListGatewaysResponse);
  rpc StartGateway(StartGatewayRequest) returns (StartGatewayResponse);
  rpc StopGateway(StopGatewayRequest) returns (StopGatewayResponse);

  // ZFS operations
  rpc CreateZFSPool(CreateZFSPoolRequest) returns (CreateZFSPoolResponse);
  rpc DeleteZFSPool(DeleteZFSPoolRequest) returns (DeleteZFSPoolResponse);
  rpc ListZFSpools(ListZFSPoolsRequest) returns (ListZFSPoolsResponse);
  rpc CreateZFSDataset(CreateZFSDatasetRequest) returns (CreateZFSDatasetResponse);
  rpc CreateZFSVolume(CreateZFSVolumeRequest) returns (CreateZFSVolumeResponse);
  rpc ResizeZFSVolume(ResizeZFSVolumeRequest) returns (ResizeZFSVolumeResponse);
  rpc DeleteZFSDataset(DeleteZFSDatasetRequest) returns (DeleteZFSDatasetResponse);

  // ZFS Snapshot operations
  rpc CreateZFSSnapshot(CreateZFSSnapshotRequest) returns (CreateZFSSnapshotResponse);
  rpc DeleteZFSSnapshot(DeleteZFSSnapshotRequest) returns (DeleteZFSSnapshotResponse);
  rpc ListZFSSnapshots(ListZFSSnapshotsRequest) returns (ListZFSSnapshotsResponse);
  rpc RestoreZFSSnapshot(RestoreZFSSnapshotRequest) returns (RestoreZFSSnapshotResponse);
  rpc CloneZFSSnapshot(CloneZFSSnapshotRequest) returns (CloneZFSSnapshotResponse);

  // LVM Snapshot operations
  rpc CreateLvmSnapshot(CreateLvmSnapshotRequest) returns (CreateLvmSnapshotResponse);
  rpc DeleteLvmSnapshot(DeleteLvmSnapshotRequest) returns (DeleteLvmSnapshotResponse);
  rpc ListLvmSnapshots(ListLvmSnapshotsRequest) returns (ListLvmSnapshotsResponse);
  rpc RestoreLvmSnapshot(RestoreLvmSnapshotRequest) returns (RestoreLvmSnapshotResponse);
}

// Pool messages
message CreatePoolRequest {
  string name = 1;
  string type = 2;
  string node = 3;
  repeated string disks = 4;
  uint64 size_gb = 5;
}

message CreatePoolResponse {
  bool success = 1;
  string message = 2;
}

message DeletePoolRequest {
  string name = 1;
  string node = 2;
}

message DeletePoolResponse {
  bool success = 1;
  string message = 2;
}

message GetPoolRequest {
  string name = 1;
  string node = 2;
}

message GetPoolResponse {
  bool success = 1;
  string message = 2;
  PoolInfo pool = 3;
}

message ListPoolsRequest {}

message ListPoolsResponse {
  bool success = 1;
  string message = 2;
  repeated PoolInfo pools = 3;
}

message AddDiskToPoolRequest {
  string pool = 1;
  string disk = 2;
  string node = 3;
}

message AddDiskToPoolResponse {
  bool success = 1;
  string message = 2;
}

message PoolInfo {
  string name = 1;
  string type = 2;
  string node = 3;
  uint64 total_gb = 4;
  uint64 free_gb = 5;
  repeated string devices = 6;
  bool thin = 7;
  string compression = 8;
}

// ZFS messages
message CreateZFSPoolRequest {
  string name = 1;
  string node = 2;
  repeated string vdevs = 3;
  bool thin = 4;
}

message CreateZFSPoolResponse {
  bool success = 1;
  string message = 2;
}

message DeleteZFSPoolRequest {
  string name = 1;
  string node = 2;
}

message DeleteZFSPoolResponse {
  bool success = 1;
  string message = 2;
}

message ListZFSPoolsRequest {}

message ListZFSPoolsResponse {
  bool success = 1;
  string message = 2;
  repeated PoolInfo pools = 3;
}

message CreateZFSDatasetRequest {
  string dataset_path = 1;
  string node = 2;
}

message CreateZFSDatasetResponse {
  bool success = 1;
  string message = 2;
}

message CreateZFSVolumeRequest {
  string pool_name = 1;
  string volume_name = 2;
  string size = 3;
  string node = 4;
}

message CreateZFSVolumeResponse {
  bool success = 1;
  string message = 2;
}

message ResizeZFSVolumeRequest {
  string volume_path = 1;
  string new_size = 2;
  string node = 3;
}

message ResizeZFSVolumeResponse {
  bool success = 1;
  string message = 2;
}

message DeleteZFSDatasetRequest {
  string dataset_path = 1;
  string node = 2;
}

message DeleteZFSDatasetResponse {
  bool success = 1;
  string message = 2;
}

message CreateZFSSnapshotRequest {
  string dataset = 1;
  string snapshot_name = 2;
  string node = 3;
}

message CreateZFSSnapshotResponse {
  bool success = 1;
  string message = 2;
}

message DeleteZFSSnapshotRequest {
  string snapshot = 1;
  string node = 2;
}

message DeleteZFSSnapshotResponse {
  bool success = 1;
  string message = 2;
}

message ListZFSSnapshotsRequest {
  string dataset = 1;
  string node = 2;
}

message ListZFSSnapshotsResponse {
  bool success = 1;
  string message = 2;
  repeated SnapshotInfo snapshots = 3;
}

message RestoreZFSSnapshotRequest {
  string dataset = 1;
  string snapshot_name = 2;
  string node = 3;
}

message RestoreZFSSnapshotResponse {
  bool success = 1;
  string message = 2;
}

message CloneZFSSnapshotRequest {
  string snapshot = 1;
  string clone_path = 2;
  string node = 3;
}

message CloneZFSSnapshotResponse {
  bool success = 1;
  string message = 2;
}

// LVM Snapshot messages
message CreateLvmSnapshotRequest {
  string resource = 1;
  string lv_name = 2;
  string snapshot_name = 3;
  string node = 4;
  string size = 5;  // e.g., "1G"
}

message CreateLvmSnapshotResponse {
  bool success = 1;
  string message = 2;
}

message DeleteLvmSnapshotRequest {
  string lv_name = 1;
  string snapshot_name = 2;
  string node = 3;
}

message DeleteLvmSnapshotResponse {
  bool success = 1;
  string message = 2;
}

message ListLvmSnapshotsRequest {
  string lv_name = 1;
  string node = 2;
}

message ListLvmSnapshotsResponse {
  bool success = 1;
  string message = 2;
  repeated SnapshotInfo snapshots = 3;
}

message RestoreLvmSnapshotRequest {
  string lv_name = 1;
  string snapshot_name = 2;
  string node = 3;
}

message RestoreLvmSnapshotResponse {
  bool success = 1;
  string message = 2;
}

// Node messages
message RegisterNodeRequest {
  string address = 1;
  string name = 2;
}

message RegisterNodeResponse {
  bool success = 1;
  string message = 2;
  NodeInfo node = 3;
}

message UnregisterNodeRequest {
  string address = 1;
}

message UnregisterNodeResponse {
  bool success = 1;
  string message = 2;
}

message GetNodeRequest {
  string address = 1;
}

message GetNodeResponse {
  bool success = 1;
  string message = 2;
  NodeInfo node = 3;
}

message ListNodesRequest {}

message ListNodesResponse {
  bool success = 1;
  string message = 2;
  repeated NodeInfo nodes = 3;
}

message NodeInfo {
  string name = 1;
  string address = 2;
  string hostname = 3;
  string state = 4;
  int64 last_seen = 5;
  string version = 6;
}

// Resource messages
message CreateResourceRequest {
  string name = 1;
  uint32 port = 2;
  repeated string nodes = 3;
  string protocol = 4;
  uint32 size_gb = 5;
  string pool = 6;
  string storage_type = 7;  // "lvm" or "zfs"
  map<string, string> drbd_options = 8;
}

message CreateResourceResponse {
  bool success = 1;
  string message = 2;
}

message DeleteResourceRequest {
  string name = 1;
}

message DeleteResourceResponse {
  bool success = 1;
  string message = 2;
}

message GetResourceRequest {
  string name = 1;
}

message GetResourceResponse {
  bool success = 1;
  string message = 2;
  ResourceInfo resource = 3;
}

message ListResourcesRequest {}

message ListResourcesResponse {
  bool success = 1;
  string message = 2;
  repeated ResourceInfo resources = 3;
}

message AddVolumeRequest {
  string resource = 1;
  string volume = 2;
  string pool = 3;
  uint32 size_gb = 4;
}

message AddVolumeResponse {
  bool success = 1;
  string message = 2;
}

message RemoveVolumeRequest {
  string resource = 1;
  uint32 volume_id = 2;
}

message RemoveVolumeResponse {
  bool success = 1;
  string message = 2;
}

message ResizeVolumeRequest {
  string resource = 1;
  uint32 volume_id = 2;
  uint32 size_gb = 3;
}

message ResizeVolumeResponse {
  bool success = 1;
  string message = 2;
}

message ResourceStatusRequest {
  string name = 1;
}

message ResourceStatusResponse {
  bool success = 1;
  string message = 2;
  ResourceStatus status = 3;
}

message SetPrimaryRequest {
  string resource = 1;
  string node = 2;
  bool force = 3;
}

message SetPrimaryResponse {
  bool success = 1;
  string message = 2;
}

message SetSecondaryRequest {
  string resource = 1;
  string node = 2;
}

message SetSecondaryResponse {
  bool success = 1;
  string message = 2;
}

message CreateFilesystemRequest {
  string resource = 1;
  uint32 volume_id = 2;
  string fstype = 3;
}

message CreateFilesystemResponse {
  bool success = 1;
  string message = 2;
}

message MountResourceRequest {
  string resource = 1;
  uint32 volume_id = 2;
  string path = 3;
  string node = 4;
  string fstype = 5;
}

message MountResourceResponse {
  bool success = 1;
  string message = 2;
}

message UnmountResourceRequest {
  string resource = 1;
  uint32 volume_id = 2;
  string node = 3;
}

message UnmountResourceResponse {
  bool success = 1;
  string message = 2;
}

message MakeHaRequest {
  string resource = 1;
  repeated string services = 2;      // systemd services to start/stop
  string mount_point = 3;            // optional mount point
  string fstype = 4;                 // filesystem type (if mount_point specified)
  string vip = 5;                    // optional virtual IP (CIDR, e.g., "192.168.1.100/24")
}

message MakeHaResponse {
  bool success = 1;
  string message = 2;
  string config_path = 3;            // path to generated promoter config
}

message EvictHaRequest {
  string resource = 1;
}

message EvictHaResponse {
  bool success = 1;
  string message = 2;
}

message ResourceInfo {
  string name = 1;
  uint32 port = 2;
  string protocol = 3;
  repeated string nodes = 4;
  string role = 5;
  repeated VolumeInfo volumes = 6;
  map<string, NodeResourceState> node_states = 7;
}

message ResourceStatus {
  string name = 1;
  string role = 2;
  repeated string nodes = 3;
  map<string, NodeResourceState> node_states = 4;
  repeated VolumeInfo volumes = 5;
}

message NodeResourceState {
  string role = 1;
  string disk_state = 2;
  string replication_state = 3;
}

message VolumeInfo {
  uint32 volume_id = 1;
  string device = 2;
  uint64 size_gb = 3;
}

// Snapshot messages
message CreateSnapshotRequest {
  string volume = 1;
  string snapshot_name = 2;
  string node = 3;
}

message CreateSnapshotResponse {
  bool success = 1;
  string message = 2;
}

message DeleteSnapshotRequest {
  string volume = 1;
  string snapshot_name = 2;
  string node = 3;
}

message DeleteSnapshotResponse {
  bool success = 1;
  string message = 2;
}

message RestoreSnapshotRequest {
  string volume = 1;
  string snapshot_name = 2;
  string node = 3;
}

message RestoreSnapshotResponse {
  bool success = 1;
  string message = 2;
}

message ListSnapshotsRequest {
  string volume = 1;
  string node = 2;
}

message ListSnapshotsResponse {
  bool success = 1;
  string message = 2;
  repeated SnapshotInfo snapshots = 3;
}

message SnapshotInfo {
  string name = 1;
  string volume = 2;
  uint64 size_gb = 3;
  string created_at = 4;
}

// Gateway messages
message CreateNFSGatewayRequest {
  string resource = 1;           // DRBD resource name
  string service_ip = 2;         // Service IP (e.g., "192.168.1.200/24")
  string export_path = 3;        // Base export path (e.g., "/data")
  repeated string allowed_ips = 4; // Allowed client IPs (e.g., ["192.168.1.0/24"])
  string fs_type = 5;            // Filesystem type (ext4, xfs)
  map<string, string> options = 6; // Additional options
}

message CreateNFSGatewayResponse {
  bool success = 1;
  string message = 2;
  string config_path = 3;        // Path to generated config file
}

message CreateISCSIGatewayRequest {
  string resource = 1;           // DRBD resource name
  string service_ip = 2;         // Service IP (e.g., "192.168.1.100/24")
  string iqn = 3;                // iSCSI Qualified Name
  repeated string allowed_initiators = 4; // Allowed initiator IQNs
  string username = 5;           // CHAP username (optional)
  string password = 6;           // CHAP password (optional)
  string implementation = 7;     // iSCSI implementation (lio, tgt, iet)
  map<string, string> options = 8; // Additional options
}

message CreateISCSIGatewayResponse {
  bool success = 1;
  string message = 2;
  string config_path = 3;        // Path to generated config file
}

message CreateNVMeGatewayRequest {
  string resource = 1;           // DRBD resource name
  string service_ip = 2;         // Service IP (e.g., "192.168.1.150/24")
  string nqn = 3;                // NVMe Qualified Name
  string transport_type = 4;     // Transport type (tcp, rdma)
  map<string, string> options = 5; // Additional options
}

message CreateNVMeGatewayResponse {
  bool success = 1;
  string message = 2;
  string config_path = 3;        // Path to generated config file
}

message DeleteGatewayRequest {
  string id = 1;
}

message DeleteGatewayResponse {
  bool success = 1;
  string message = 2;
}

message GetGatewayRequest {
  string id = 1;
}

message GetGatewayResponse {
  bool success = 1;
  string message = 2;
  GatewayInfo gateway = 3;
}

message ListGatewaysRequest {}

message ListGatewaysResponse {
  bool success = 1;
  string message = 2;
  repeated GatewayInfo gateways = 3;
}

message StartGatewayRequest {
  string id = 1;
}

message StartGatewayResponse {
  bool success = 1;
  string message = 2;
}

message StopGatewayRequest {
  string id = 1;
}

message StopGatewayResponse {
  bool success = 1;
  string message = 2;
}

message GatewayInfo {
  string id = 1;
  string name = 2;
  string type = 3;
  string state = 4;
  string node = 5;
  string resource = 6;
  uint32 volume_id = 7;
  string path = 8;
  map<string, string> options = 9;
}

message DeleteHaRequest {
  string resource = 1;
}

message DeleteHaResponse {
  bool success = 1;
  string message = 2;
}

message GetHaRequest {
  string resource = 1;
}

message GetHaResponse {
  bool success = 1;
  string message = 2;
  HaConfigInfo config = 3;
}

message ListHaRequest {}

message ListHaResponse {
  bool success = 1;
  string message = 2;
  repeated HaConfigInfo configs = 3;
}

message HaConfigInfo {
  string resource = 1;
  string vip = 2;
  string mount_point = 3;
  string fs_type = 4;
  repeated string services = 5;
}

