syntax = "proto3";

package sds.v1;

option go_package = "github.com/liliang-cn/sds/proto";

import "google/protobuf/empty.proto";

// ========== Pool Management ==========

message CreatePoolRequest {
    string name = 1;
    string pool_type = 2;  // "vg" or "thin_pool"
    string node = 3;
    repeated string disks = 4;
    string size = 5;  // e.g., "10G", "1024M"
}

message CreatePoolResponse {
    bool success = 1;
    string message = 2;
}

message GetPoolRequest {
    string name = 1;
}

message PoolInfo {
    string name = 1;
    string pool_type = 2;
    string node = 3;
    uint64 total_gb = 4;
    uint64 free_gb = 5;
    repeated string disks = 6;
}

message GetPoolResponse {
    PoolInfo pool = 1;
}

message ListPoolsRequest {
    string node = 1;  // optional filter
}

message ListPoolsResponse {
    repeated PoolInfo pools = 1;
}

message AddDiskToPoolRequest {
    string pool = 1;
    string disk = 2;
    string node = 3;
}

message AddDiskToPoolResponse {
    bool success = 1;
    string message = 2;
}

// ========== Node Management ==========

message NodeInfo {
    string name = 1;
    string address = 2;
    uint32 node_id = 3;
    bool online = 4;
}

message ListNodesResponse {
    repeated NodeInfo nodes = 1;
}

message GetNodeRequest {
    string name = 1;
}

message GetNodeResponse {
    NodeInfo node = 1;
}

message RegisterNodeRequest {
    string name = 1;
    string address = 2;
    uint32 node_id = 3;
}

message RegisterNodeResponse {
    bool success = 1;
    string message = 2;
}

// ========== Resource Management ==========

message CreateResourceRequest {
    string name = 1;
    uint32 port = 2;
    repeated string nodes = 3;
    string protocol = 4;  // "A", "B", or "C"
    uint32 replicas = 5;
    string size = 6;
}

message CreateResourceResponse {
    bool success = 1;
    string message = 2;
}

message ResourceInfo {
    string name = 1;
    uint32 port = 2;
    string protocol = 3;
    repeated string nodes = 4;
    repeated VolumeInfo volumes = 5;
    string role = 6;
}

message VolumeInfo {
    string name = 1;
    uint32 volume_id = 2;
    string pool = 3;
    uint64 size_gb = 4;
    string device = 5;
}

message GetResourceRequest {
    string name = 1;
}

message GetResourceResponse {
    ResourceInfo resource = 1;
}

message ListResourcesResponse {
    repeated ResourceInfo resources = 1;
}

message DeleteResourceRequest {
    string name = 1;
}

message DeleteResourceResponse {
    bool success = 1;
    string message = 2;
}

message AddVolumeRequest {
    string resource = 1;
    string volume = 2;
    string pool = 3;
    string size = 4;
}

message AddVolumeResponse {
    bool success = 1;
    string message = 2;
}

message RemoveVolumeRequest {
    string resource = 1;
    string volume = 2;
}

message RemoveVolumeResponse {
    bool success = 1;
    string message = 2;
}

message ResizeVolumeRequest {
    string resource = 1;
    string volume = 2;
    string size = 3;
}

message ResizeVolumeResponse {
    bool success = 1;
    string message = 2;
}

message ResourceStatusRequest {
    string name = 1;
}

message ResourceStatusResponse {
    string role = 1;
    string disk_state = 2;
    string connection_state = 3;
    repeated VolumeStatus volumes = 4;
}

message VolumeStatus {
    uint32 volume_id = 1;
    string device = 2;
    string disk_state = 3;
}

message SetPrimaryRequest {
    string resource = 1;
    string node = 2;
    bool force = 3;
}

message SetPrimaryResponse {
    bool success = 1;
    string message = 2;
}

// ========== Snapshot Management ==========

message CreateSnapshotRequest {
    string volume = 1;
    string name = 2;
    string node = 3;
}

message CreateSnapshotResponse {
    bool success = 1;
    string message = 2;
}

message DeleteSnapshotRequest {
    string volume = 1;
    string name = 2;
    string node = 3;
}

message DeleteSnapshotResponse {
    bool success = 1;
    string message = 2;
}

message RestoreSnapshotRequest {
    string volume = 1;
    string name = 2;
    string node = 3;
}

message RestoreSnapshotResponse {
    bool success = 1;
    string message = 2;
}

message ListSnapshotsRequest {
    string volume = 1;
    string node = 2;
}

message SnapshotInfo {
    string name = 1;
    string volume = 2;
    uint64 size_gb = 3;
    string created_at = 4;
}

message ListSnapshotsResponse {
    repeated SnapshotInfo snapshots = 1;
}

// ========== Gateway Management ==========

message CreateNfsGatewayRequest {
    string resource = 1;
    string ip = 2;
    string export_path = 3;
    string clients = 4;
    string options = 5;
}

message CreateNfsGatewayResponse {
    bool success = 1;
    string message = 2;
}

message GatewayInfo {
    string resource = 1;
    string service_type = 2;  // "nfs", "iscsi", "nvme"
    string ip = 3;
    string status = 4;
}

message ListGatewaysResponse {
    repeated GatewayInfo gateways = 1;
}

// SDS Controller Service
service SDSController {
    // Pool operations
    rpc CreatePool(CreatePoolRequest) returns (CreatePoolResponse);
    rpc GetPool(GetPoolRequest) returns (GetPoolResponse);
    rpc ListPools(ListPoolsRequest) returns (ListPoolsResponse);
    rpc AddDiskToPool(AddDiskToPoolRequest) returns (AddDiskToPoolResponse);

    // Node operations
    rpc ListNodes(google.protobuf.Empty) returns (ListNodesResponse);
    rpc GetNode(GetNodeRequest) returns (GetNodeResponse);
    rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse);

    // Resource operations
    rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse);
    rpc GetResource(GetResourceRequest) returns (GetResourceResponse);
    rpc ListResources(google.protobuf.Empty) returns (ListResourcesResponse);
    rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse);
    rpc AddVolume(AddVolumeRequest) returns (AddVolumeResponse);
    rpc RemoveVolume(RemoveVolumeRequest) returns (RemoveVolumeResponse);
    rpc ResizeVolume(ResizeVolumeRequest) returns (ResizeVolumeResponse);
    rpc ResourceStatus(ResourceStatusRequest) returns (ResourceStatusResponse);
    rpc SetPrimary(SetPrimaryRequest) returns (SetPrimaryResponse);

    // Snapshot operations
    rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse);
    rpc DeleteSnapshot(DeleteSnapshotRequest) returns (DeleteSnapshotResponse);
    rpc RestoreSnapshot(RestoreSnapshotRequest) returns (RestoreSnapshotResponse);
    rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsResponse);

    // Gateway operations
    rpc CreateNfsGateway(CreateNfsGatewayRequest) returns (CreateNfsGatewayResponse);
    rpc ListGateways(google.protobuf.Empty) returns (ListGatewaysResponse);
}
